--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <%= link_to root_path do %>
@@ -7,32 +8,42 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+
+    <ul class="navbar-nav  mr-auto">
+      <li class="nav-item">
         <%= link_to "所有文章" ,root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "全站快訊" ,website_path, class: "nav-link" %>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <%= link_to "發文", new_article_path, class: "nav-link"  %>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
+    <ul class="nav navbar-nav navbar-right">
+     <% if current_user %>
+      <li>
+        <%= link_to destroy_user_session_path, method: :delete do %>
+          登出
+        <% end %>
+      </li>
+      <li>
+        <%= link_to edit_user_registration_path do %>
+          編輯
+        <% end %>
+        </li>
+    <% else %>
+      <li>
+        <%= link_to new_user_registration_path do %>
+          註冊
+        <% end %>
+      </li>
+      <li>
+        <%= link_to new_user_session_path do %> 
+          登入
+        <% end %>   
+      </li>
+    <% end %>
+  </ul>
+
 </nav>
