article table backend

--- a/app/views/shared/_article_index.html.erb
+++ b/app/views/shared/_article_index.html.erb
@@ -25,31 +25,21 @@
   <table class="table table-hover">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Reply count</th>
+        <th scope="col">Title</th>
+        <th scope="col">Last reply at</th>
+        <th scope="col">Viewed count</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
+      <% articles.each do |article| %>
+        <tr>
+          <td><%= article.replies_count %></td>
+          <td><%= article.title %></td>
+          <td><%= article.created_at %></td>
+          <td><%= article.viewed_count %></td>
+        </tr>
+      <% end %>
     </tbody>
   </table>
 </div>
