--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,55 +1,1 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">淡水小站</h1>
-  </div>
-</div>
-
-<div class = container>
-  <nav>
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <%= link_to "所有文章", articles_path, class: "nav-item nav-link active" %>
-      <%= link_to "心情", mood_articles_path, class: "nav-item nav-link" %>
-      <%= link_to "課業", study_articles_path, class: "nav-item nav-link" %>
-      <%= link_to "娛樂", fun_articles_path, class: "nav-item nav-link" %>
-      <%= link_to "工作", work_articles_path, class: "nav-item nav-link" %>
-      <%= link_to "其他", others_articles_path, class: "nav-item nav-link" %>
-    </div>
-  </nav>
-  <div class="tab-content" id="nav-tabContent">
-    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"></div>
-    <br>
-    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"></div>
-    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab"></div>
-  </div>
-
-  <table class="table table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<%= render partial: "shared/article_index", locals: { articles: @articles}%>
