--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,5 +3,11 @@
   <%= f.text_field :title %>
   <%= f.label :content, "Content" %>
   <%= f.text_area :content %>
+  <%= f.collection_radio_buttons :visible_id, Visible.all, :id , :name %>
+  <%= f.collection_radio_buttons :category_id, Category.all, :id , :name %>
+
+  <%= f.button  :draft , name: "status",value: "draft"%>
   <%= f.submit %>
 <% end %>
+
+
