--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,6 +22,9 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
      <% if current_user %>
+     <li>
+      <%= link_to "profile", user_path(current_user) %>
+     </li>
       <li>
         <%= link_to destroy_user_session_path, method: :delete do %>
           登出
