--- a/app/views/users/collect.html.erb
+++ b/app/views/users/collect.html.erb
@@ -1,1 +1,44 @@
-<h1>collect</h1>
+<%= @user.name %>
+<br>
+<%= @user.intro%>
+<br>
+
+
+<div class = container>
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <%= link_to "My Post", user_path(@user), class: "nav-item nav-link active" %>
+      <%= link_to "My Comment", comment_user_path(@user), class: "nav-item nav-link" %>
+      <%= link_to "My Collect", collect_user_path(@user), class: "nav-item nav-link" %>
+      <%= link_to "My Draft", draft_user_path(@user), class: "nav-item nav-link" %>
+      <%= link_to "My Friend", friend_user_path(@user), class: "nav-item nav-link" %>
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"></div>
+    <br>
+    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"></div>
+    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab"></div>
+  </div>
+
+  <table class="table table-hover">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Reply count</th>
+        <th scope="col">Title</th>
+        <th scope="col">Last reply at</th>
+        <th scope="col">Viewed count</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @articles.each do |article| %>
+        <tr>
+          <td><%= article.replies_count %></td>
+          <td><%= article.title %></td>
+          <td><%= article.created_at %></td>
+          <td><%= article.viewed_count %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
